feat: update plaid link connection business logic
